# liqudityriskapp

./: .dockerignore  .env.example  .gitignore  README.md  journeyflow.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scratch.txt  serverless.yml
assets/: apps-support-challenges.pptx
deployment/: deploy.sh
monitoring/: cloudwatch_alarms.py  custom_metrics.py
scripts/: cleanup.sh  test_data_generator.py
src/config/: aws_config.py  regulatory_config.py  settings.py
src/handlers/: kinesis_processor.py  s3_trigger_handler.py
src/models/: data_models.py  risk_metrics.py  trade.py
src/services/: dynamodb_service.py  kinesis_service.py  notification_service.py  regulatory_service.py  risk_calculator.py
src/tests/: test_handlers.py  test_services.py
src/utils/: transformers.py
terraform/: main.tf  variables.tf
